[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/editor/window.gd" type="Script" id=2]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/editor/assets/window.png" type="Texture" id=4]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=5]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=6]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/styles/ButtonStyleHover.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/styles/ButtonStyleNormal.tres" type="StyleBox" id=9]
[ext_resource path="res://scenes/shared/background/backgrounds/day/day.png" type="Texture" id=10]
[ext_resource path="res://scenes/shared/background/foregrounds/hills/preview.png" type="Texture" id=11]
[ext_resource path="res://scenes/editor/window/autosave.gd" type="Script" id=12]
[ext_resource path="res://scenes/menu/levels_screen/shine_icon.png" type="Texture" id=13]
[ext_resource path="res://scenes/menu/levels_screen/ui/star_coin_icon.png" type="Texture" id=14]
[ext_resource path="res://scenes/editor/window/autosavetimer.gd" type="Script" id=16]
[ext_resource path="res://scenes/shared/ui/selector.tres" type="Theme" id=17]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 11.0
content_margin_right = 11.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[node name="AreasWindow" type="NinePatchRect"]
margin_left = 165.0
margin_top = 130.0
margin_right = 1218.0
margin_bottom = 680.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 108, 290 )
patch_margin_left = 40
patch_margin_top = 110
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 2 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 24.2632
margin_right = 456.0
margin_bottom = 102.263
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Autosave"
text = "Autosave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 888.65
margin_top = 12.953
margin_right = 1043.65
margin_bottom = 93.953
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Contents" type="Control" parent="."]
anchor_bottom = 0.06
margin_left = 17.4044
margin_top = 104.0
margin_right = 1036.4
margin_bottom = 498.0
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Contents"]
margin_left = 431.0
margin_top = 21.0
margin_right = 1008.0
margin_bottom = 271.0

[node name="LevelName" type="Label" parent="Contents/VBoxContainer"]
margin_right = 577.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "Level Name"
clip_text = true

[node name="Date" type="OptionButton" parent="Contents/VBoxContainer"]
margin_top = 59.0
margin_right = 577.0
margin_bottom = 100.0
theme = ExtResource( 17 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "ttt"

[node name="LoadButton" type="Button" parent="Contents"]
margin_left = 47.5955
margin_top = 311.0
margin_right = 447.596
margin_bottom = 401.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
shortcut_in_tooltip = false
action_mode = 0
text = "Load Save"

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/LoadButton"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/LoadButton"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="ClearButton" type="Button" parent="Contents"]
margin_left = 570.096
margin_top = 311.0
margin_right = 970.096
margin_bottom = 401.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
shortcut_in_tooltip = false
action_mode = 0
text = "Clear All Saves"

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/ClearButton"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/ClearButton"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="ShineProgressPanel" type="PanelContainer" parent="Contents"]
margin_left = 430.096
margin_top = 128.5
margin_right = 687.096
margin_bottom = 211.5
rect_rotation = -0.617545
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/ShineProgressPanel"]
margin_left = 16.0
margin_top = 2.0
margin_right = 241.0
margin_bottom = 81.0

[node name="ShineIcon" type="TextureRect" parent="Contents/ShineProgressPanel/HBoxContainer2"]
margin_right = 110.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineProgressLabel" type="Label" parent="Contents/ShineProgressPanel/HBoxContainer2"]
margin_left = 147.0
margin_top = 12.0
margin_right = 225.0
margin_bottom = 67.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarCoinProgressPanel" type="PanelContainer" parent="Contents"]
margin_left = 740.096
margin_top = 126.0
margin_right = 998.096
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Contents/StarCoinProgressPanel"]
margin_left = 16.0
margin_top = 2.0
margin_right = 242.0
margin_bottom = 83.0

[node name="StarCoinIcon" type="TextureRect" parent="Contents/StarCoinProgressPanel/HBoxContainer3"]
margin_right = 111.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarCoinProgressLabel" type="Label" parent="Contents/StarCoinProgressPanel/HBoxContainer3"]
margin_left = 148.0
margin_top = 13.0
margin_right = 226.0
margin_bottom = 68.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 9 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Contents"]
margin_left = 18.0
margin_top = 21.0
margin_right = 413.0
margin_bottom = 258.0
size_flags_horizontal = 9
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="ThumbnailImage" type="TextureRect" parent="Contents/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 387.0
margin_bottom = 229.0
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ForegroundThumbnailImage" type="TextureRect" parent="Contents/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 387.0
margin_bottom = 229.0
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Timer" type="Control" parent="."]
margin_left = -107.5
margin_top = -165.0
margin_right = -67.5
margin_bottom = -125.0
rect_scale = Vector2( 1.25, 1.25 )
script = ExtResource( 16 )

[node name="Selector" type="OptionButton" parent="Timer"]
margin_left = 617.5
margin_top = 397.5
margin_right = 866.5
margin_bottom = 450.5
theme = ExtResource( 17 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )

[node name="TimerLabel" type="Label" parent="Timer"]
margin_left = 465.0
margin_top = 392.5
margin_right = 823.0
margin_bottom = 447.5
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "Timer:"

[node name="Tween" type="Tween" parent="."]

[node name="LevelName" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.376471 )
margin_left = 290.0
margin_top = 182.5
margin_right = 867.0
margin_bottom = 237.5
custom_fonts/font = SubResource( 3 )
text = "No autosave found..."
clip_text = true
